# green-params

./: CMakeLists.txt  README.md
.github/workflows/: test.yaml
libs/argparse/: argparse.h  argparse.hpp
libs/ini/: iniparser.h
src/: CMakeLists.txt
src/green/params/: common.h  except.h  params.h  params_t.h
test/: CMakeLists.txt  CmakeLists.txt  params_test.cpp
test/data/: test.ini
